@@ -141,9 +141,8 @@ We quote in particular:
   and Riccardo Mazzarello (ETHZ-USI Lugano);
   \item Ismaila Dabo (INRIA, Palaiseau) for electrostatics with
   free boundary conditions;
-  \item Dario Alf\`e (University College London) , Norbert Nemec 
-   and Mike Towler (U.Cambridge) for interface with 
-  \texttt{CASINO};
+  \item Dario Alf\`e, Mike Towler (University College London), 
+   Norbert Nemec (U.Cambridge) for interface with \texttt{CASINO};
   \item Matteo Cococcioni (Univ. Minnesota) for DFT+U implementation;
   \item Gabriele Sclauzero (IRRMA Lausanne) for DFT+U
    with on-site occupations obtained from pseudopotential projectors;
